ensure there's always spacing between page content and the page footer

--- a/UI/Source/GeneralStyle/GeneralStyle.30.scss
+++ b/UI/Source/GeneralStyle/GeneralStyle.30.scss
@@ -53,3 +53,8 @@ html {
 html .container {
 	max-width: var(--max-width);
 }
+
+// ensure there's always spacing between page content and the page footer
+#react-root > #wrapper > #content + footer {
+	margin-top: px_to_rem(40);
+}
